--- a/javascript/类型.md
+++ b/javascript/类型.md
@@ -1,6 +1,6 @@
 # javascript 数据类型
 
-基本数据类型：String, Number, Boolean, Null, Undefined, Symbol
+基本数据类型：String, Number, Boolean, Null, Undefined, Symbol, BigInt
 引用数据类型：Object, Array, Function
 
 \* 区别：基本数据类型存储在栈内存中。引用数据类型的值存储在堆内存中，在栈中存储的是指向堆内存的指针。
@@ -22,6 +22,21 @@
 
 1. typeof
    typeof 能准确判断除了 null 以外的基本数据类型的值。对于引用数据类型，除了 function 会判断成 Function,其他引用类型一律返回 object.
+
 2. instanceof
    instanceof 可以准确的判断复杂数据类型，但是不能正确判断基本数据类型。
+
 3. Object.prototype.toString
+
+4. Object.is
+   用来比较两个值是否严格相等，与严格比较运算符（ === ）的行为基本一致
+
+```
+Object.is('foo', 'foo'); // true
+
+Object.is({}, {}); //false
+```
+
+### Object.is 和 === 的区别？
+
+Object 在严格等于的基础上修复了一些特殊情况下的失误，具体来说就是+0 和-0，NaN 和 NaN。
