--- a/javascript/类型.md
+++ b/javascript/类型.md
@@ -18,17 +18,124 @@
 
 2. 给变量 赋值 null 相当于分配了一块空的内存，会被 js 回收。赋值 undefined 只是将值清空，变量依然存在。
 
+# 类型转换
+
+## 数字类型转换
+
+### Number
+
+对于不同的类型有不同类型的底层转换规则，将引用类型转化为字符串，首先将它基于 toString()方法转化为字符串，然后将字符串转化为数字。
+字符串 => 数字 ： 非有效字符串转化为 NaN;
+布尔 => 数字：1 或 0;
+null =>数字：0;
+undefined => 数字：NaN;
+' ' => 数字：0;
+对象 => 数字：先把【对象】转化为【字符串】，在转化为【数字】;
+[] => 数字：0 （遵循以上对象转换的规则）。
+
+```
+Number(10);         // 10
+Number('10');       // 10
+Number('10a');      // NaN
+Number(true);       // 1
+Number(null);       // 0
+Number(undefined);  // NaN
+Number('');         // 0
+Number([1,2]);      // NaN
+Number([]);         // 0
+```
+
+### parseInt([val, [进制]])/parseFloat([val, [进制]])
+
+对于字符串来说，从左到右依次查找有效的数字字符，直到遇到非有效数字字符，停止查找（不管后边是否还有数字）。如果不为字符串，先将转化为字符串，再进行查找。（非有效数字字符开头则返回 NaN）
+
+```
+let str = '12.5px';
+parsetInt(str); // 12
+parseFloat(str); // 12.5
+parsetFloat(true); // NaN
+```
+
+## 布尔类型转换
+
+除了特殊的几个值 ‘’ 、 undefined 、 NAN 、 null 、 false 、 0 转化为 Boolean 为 false
+之外，其他类型值都转化为 true 。
+
+```
+Boolean('') // false
+Boolean(undefined) // false
+Boolean(null) // false
+Boolean(NaN) // false
+Boolean(false) // false
+Boolean(0) // false
+Boolean({}) // true
+Boolean([]) // true
+```
+
 # 类型判断
 
 1. typeof
-   typeof 能准确判断除了 null 以外的基本数据类型的值。对于引用数据类型，除了 function 会判断成 Function,其他引用类型一律返回 object.
+   typeof 能准确判断除了 null 以外的基本数据类型的值。对于引用数据类型，除了 function 会判断成 function,其他引用类型一律返回 object。
+
+   ```
+      typeof undefined   // 'undefined'
+      typeof '10'        // 'string'
+      typeof 10          // 'number'
+      typeof false       // 'boolean'
+      typeof Symbol()    // 'symbol'
+      typeof Function    // 'function'
+      typeof null        // 'object’
+      typeof []          // 'object'
+      typeof {}          // 'object'
+   ```
+
+   为什么 typeof null 等于 object?
+   不同的对象在底层原理的存储是用二进制表示的，在 javaScript 中，如果二进制的前三位都为 0 的
+   话，系统会判定为是 Object 类型。null 的存储二进制是 000 ，也是前三位，所以系统判定 null
+   为 Object 类型。
 
 2. instanceof
-   instanceof 可以准确的判断复杂数据类型，但是不能正确判断基本数据类型。
+   instanceof 可以准确的判断复杂数据类型，但是不能正确判断基本数据类型。原理是通过判断一个对象的原型链上是否可以找到该构造函数的原型对象 prototype。
 
-3. Object.prototype.toString
+   ```
+   function Foo() {}
 
-4. Object.is
+   const f1 = new Foo();
+
+   console.log(f1 instanceof Foo); // true
+   f1.__proto__ === Foo.prototype
+   ```
+
+3. constructor
+   引用类型可以使用 xxx.constructor.name 构造函数来判断
+
+   ```
+   const arr = [1, 2];
+   console.log(arr.constructor.name); // Array
+   ```
+
+4. Object.prototype.toString.call();
+   一种最好的基本类型检测方式 Object.prototype.toString.call() ;它可以区分 null 、string 、
+   boolean 、number 、undefined 、symbol、array 、function 、object 、date 、math 数据类型。
+
+   ```
+   Object.prototype.toString.call(null);  // "[object Null]"
+   Object.prototype.toString.call(123);   // "[object Number]"
+   Object.prototype.toString.call(true);  // "[object Boolean]"
+
+   // 判断引用类型
+   function fn(){
+      console.log(“xiaolu”);
+   }
+   const date = new Date();
+   const arr = [1,2,3];
+
+   Object.prototype.toString.call(fn);    // "[object Function]"
+   Object.prototype.toString.call(date);  // "[object Date]"
+   Object.prototype.toString.call(arr);   // "[object Array]"
+   ```
+
+5. Object.is
    用来比较两个值是否严格相等，与严格比较运算符（ === ）的行为基本一致
 
 ```
@@ -40,3 +147,122 @@ Object.is({}, {}); //false
 ### Object.is 和 === 的区别？
 
 Object 在严格等于的基础上修复了一些特殊情况下的失误，具体来说就是+0 和-0，NaN 和 NaN。
+
+# 堆栈是如何存储的
+
+在 javascript 中，每一个数据都需要一个内存空间，内存空间又被分为栈内存和堆内存。
+栈内存一般储存基础数据类型，特殊：闭包变量是存在堆内存中的。
+堆内存一般储存引用数据类型，每个对象在堆内存中有一个引用地址，就像是每个房间都有一个房间号一样。引用类型在栈中保存的就是这个对象在堆内存的引用地址
+
+## 内存溢出
+
+内存溢出是程序运行所需的内存大于可用内存，就出现内存溢出错误。就像水杯，满了之后再加水就会溢出。
+
+内存溢出一般是内存泄漏造成的，占用的内存不需要用到了但没有及时释放，内存泄漏积累的多了，轻的话影响系统性能，严重直接引起内存溢出系统崩溃。
+
+JavaScript 内存泄漏的一些场景
+
+1. 全局变量引起的内存泄漏：根据 JavaScript 的垃圾回收机制我们知道，全局变量或被全局变量引用是不会被回收的，所有一些不需要的全局变量多了，没有释放就造成了内存泄漏。
+
+```
+// 全局作用域下定义
+function count(number) {
+   // basicCount相当于window.basicCount = 2;
+   basicCount = 2;
+   return basicCount + number;
+}
+```
+
+2. 闭包：内部的变量因为被闭包引用得不到释放，也会造成内存泄漏。
+
+```
+function closure() {
+   const name = "vettel";
+
+   return () => {
+      return name;
+   }
+}
+
+const reverseName = closure();
+```
+
+3. 计时器没有移除：计时器没有清除是一直存在的，一直存在没有被释放就会造成内存泄漏。
+
+```
+// vue组件
+<template>
+   <div></div>
+</template>
+
+<script>
+   export default {
+      methods: {
+         refresh() {
+            // 获取数据
+         }
+      },
+
+      mounted() {
+         this.refreshInterval = setInterval(function() {
+            this.refresh();
+         }, 2000);
+      },
+      // 组件销毁的时候没有消除计时器会造成内存泄漏
+      beforeDestroy() {
+         clearInterval(this.refreshInterval);
+      }
+   }
+</script>
+```
+
+4. 事件监听器没有移除：事件监听器没有清除是一直存在的，一直存在没有被释放就会造成内存泄漏。
+
+```
+<template>
+   <div></div>
+</template>
+
+<script>
+export default {
+   mounted() {
+      this.resizeEventCallback = () => {
+         // 做一些操作
+      }
+
+      window.addEventListener('resize', this.resizeEventCallback);
+   },
+
+   // 组件销毁的时候没有移除相关事件会造成内存泄漏
+   beforeDestroy() {
+      window.removeEventListener('resize', this.resizeEventCallback);
+   }
+}
+</script>
+```
+
+5. ES6 Map 键名
+
+```
+let map = new Map();
+let key = { n: 'vettel' };
+map.set(key, 1);
+
+// map不清除键名有内存泄漏（引用类型）
+map.delete(key);
+key = null;
+```
+
+6. ES6 Set 成名
+
+```
+let set = new Set();
+let value = { n: 'vettel' };
+set.add(key, 1);
+
+// set不清除成员有内存泄漏（引用类型）
+set.delete(key);
+value = null;
+```
+
+7. 给 DOM 添加属性或方法：给 DOM 添加点击方法、添加属性等，也会造成变量引用得不到释放，造成内存泄漏。
